--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -5,3 +5,6 @@ Todo List For py-Asterisk.
     - Import old public domain AGI.py or rewrite it. At the least refactor it
       to not be so terrible.
 
+    - Status/ParkedCalls/ShowZapChannels/etc. can only be used asyncronously,
+      they cannot be used to simply trigger sending of events. This is wrong,
+      but how do I fix?
