--- a/THANKS
+++ b/THANKS
@@ -17,5 +17,5 @@ have contributed to keeping py-Asterisk alive:
     Clinton James
     Salim Fadhley
     Nick Knight
-    Alexis de Lattre
+    Jacek Ziolkowski
 
