--- a/THANKS
+++ b/THANKS
@@ -18,4 +18,5 @@ have contributed to keeping py-Asterisk alive:
     Salim Fadhley
     Nick Knight
     Jacek Ziolkowski
+    Aiden Andrews-McDermott
 
