--- a/THANKS
+++ b/THANKS
@@ -3,6 +3,8 @@ is entirely the result of numerous others' toil in keeping it maintained over
 the past years. Special thanks to those who reported bugs, and to those who
 have contributed to keeping py-Asterisk alive:
 
+    Sébastien Couture
+    Sadiel Orama
     Jean Schurger
     Alexis de Lattre
     Robby Dermody
