--- a/THANKS
+++ b/THANKS
@@ -3,6 +3,10 @@ is entirely the result of numerous others' toil in keeping it maintained over
 the past years. Special thanks to those who reported bugs, and to those who
 have contributed to keeping py-Asterisk alive:
 
+    Mister Snilek
+    Roel van Meer
+    Rodrigo Ramírez Norambuena
+    Javier Acosta
     Sébastien Couture
     Sadiel Orama
     Jean Schurger
