--- a/THANKS
+++ b/THANKS
@@ -25,4 +25,4 @@ have contributed to keeping py-Asterisk alive:
     Nick Knight
     Jacek Ziolkowski
     Aiden Andrews-McDermott
-
+    "litnimax" (on github)
